# surrealpy-async

./: .env.sample  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: main.py  model.py
surreal/: _types.py  column.py  query.py  table.py  utils.py
surreal/models/: bases.py
